# sustainandgain.fun

./: .env  .gitignore  Pipfile  Procfile  README.md  docker-compose.yml  manage.py  requirements.txt
.github/workflows/: deploy.yml  django.yml
about/: apps.py  urls.py  views.py
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_friend.py  0003_friendrequest.py  0005_profile.py  (+2 more)
autoencoder/: Cargo.toml  Pipfile  autoencoder-0.1.0-cp310-none-win_amd64.whl  cnn.rs  convolutional_layer.rs  fully_connected_layer.rs  layer.rs  lib.rs  max_pooling_layer.rs  pyproject.toml
autoencoder/src/: lib.rs  unmax_pooling_layer.rs
chat/: admin.py  forms.py  models.py  urls.py  views.py
feed/: models.py  urls.py  views.py
friends/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
groups/: models.py
imagenet/: apps.py  signals.py
leagues/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
nginx/: nginx.conf.sigil
notifications/: admin.py  models.py  urls.py  views.py
static/: landing_page.css  robots.txt  style.css  walkthrough.json
sustainability/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
templates/: _navbar.html  _notifications.html  base.html  home.html
templates_v2/: base.html
worker/: Cargo.toml  Dockerfile  Procfile  README.md  sqlx-data.json
worker/src/: bomb_task.rs  lib.rs  mail.rs  main.rs  notifications.rs  schedule.rs
(+125 files in other folders)
