[package]
name = "worker"
description = "Runs background tasks such as email notifications"
version = "0.1.0"
edition = "2021"

[lib]
name = "worker"
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
tokio = { version="1.26", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.23"
lettre = { version="0.10.3", default-features= false, features = ["smtp-transport", "builder", "hostname", "tokio1", "tokio1-rustls-tls"] }
serde_json = "1.0.94"
serde = "1.0.155"


[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
]
